ad button for resizing function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Etch -a- Sketch</h1>
+    <button class="btn">change box size</button>
     <div class="container" id="container"></div>
 
 <script src="app.js">
